--- a/lighting/style.css
+++ b/lighting/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+}
+
 body {
     background-color: gray;
 }
@@ -11,3 +15,11 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+#fps-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px;
+}
+
