--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 .links {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 24px;
-    padding: 12px;
+    padding: 24px;
+    list-style: none;
+    text-align: center;
+}
+
+li {
+    margin-bottom: 5px;
 }
