--- a/side-scroller/style.css
+++ b/side-scroller/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: black;
 }
@@ -8,8 +14,19 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border: 5px solid white;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #playerImage, #backgroundImage, #enemyImage {
     display: none;
+}
+
+#fullScreenButton {
+    position: absolute;
+    font-size: 20px;
+    padding: 10px;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
 }
