--- a/pong/style.css
+++ b/pong/style.css
@@ -17,8 +17,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 1200px;
-    height: 800px;
     max-width: 100%;
+    height: auto;
     /* https://caniuse.com/?search=image-rendering */
     image-rendering: pixelated;
 
