--- a/flappy-bird/style.css
+++ b/flappy-bird/style.css
@@ -13,8 +13,7 @@
     width: 1080px;
     max-width: 100%;
     height: auto;
-
-    background-color: rgb(40, 45, 52);
+    image-rendering: pixelated;
 }
 
 img {
