--- a/flappy-bird/style.css
+++ b/flappy-bird/style.css
@@ -10,10 +10,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 1080px;
+    width: 1024px;
+    /* width: 512px; */
     max-width: 100%;
     height: auto;
     image-rendering: pixelated;
+
 }
 
 img {
