--- a/box-breathing/style.css
+++ b/box-breathing/style.css
@@ -5,8 +5,10 @@ body {
 #canvas {
     position: absolute;
     background-color: black;
-    width: 100vw;
-    height: 100wh;
-    top: 0;
-    left: 0;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
 }
